--- a/theme.html
+++ b/theme.html
@@ -474,11 +474,11 @@
         <div class="row">
           <div class="col-xl-6 col-lg-4 mb-4">
             <!-- Card -->
-            <div class="card shadow h-100 bg-dark-secondary">
+            <div class="card shadow h-100 bg-primary">
               <div class="card-body d-flex flex-column align-items-start">
-                <h4 class="card-title text-light font-weight-bold">Card Dark Accent Fill</h4>
+                <h4 class="card-title text-light font-weight-bold">Card Primary Fill</h4>
                 <p class="card-text text-light">With supporting text below as a natural lead-in to additional content. This has text that may wrap to the next line.</p>
-                <a href="#" class="btn btn-secondary text-light mt-auto">Button</a>
+                <a href="#" class="btn btn-outline-secondary text-light mt-auto">Button</a>
               </div>
             </div>
 
