--- a/template.html
+++ b/template.html
@@ -30,8 +30,76 @@
     <meta name="msapplication-TileImage" content="media/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <!--font awesome cdn for social Buttons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--TODO: Change Title -->
     <title>Page Title</title>
 
   </head>
   <body>
+    <!--TODO: Update Active classes on links if applicable-->
+    <!--TODO: We can decide to use dropdowns or another popup or make them click through.-->
+    <!--NAVBAR-->
+    <nav class="navbar navbar-light navbar-expand-lg bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarColor02">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              About
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Donors and Sponsors</a>
+              <a class="dropdown-item" href="#">FAQ</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Membership</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Group Projects
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Scramble and Synthetic Yeast</a>
+              <a class="dropdown-item" href="#">Barcoding the Harbor</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">For Scientists</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">For Community Members</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">For Kids</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Support Us</a>
+          </li>
+        </ul>
+        <form class="form-inline" method="get" action="../search.php">
+          <input class="form-control mr-sm-2" type="search" name="query" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+    <footer>
+
+      <!-- Add font awesome icons -->
+      <hr>
+      <div class="container justify-content-center text-center" style="font-size: 3.5rem;">
+        <a href="https://www.facebook.com/BUGSS-Baltimore-Under-Ground-Science-Space-275707269195705/" class="fa fa-facebook text-decoration-none"></a>
+        <a href="https://twitter.com/bugsslab" class="fa fa-twitter text-decoration-none"></a>
+        <a href="https://www.youtube.com/channel/UCr4bqCH50xDCnrWBCUbobBQ" class="fa fa-youtube text-decoration-none"></a>
+        <a href="https://www.instagram.com/bugsslab/" class="fa fa-instagram text-decoration-none"></a>
+      <div>
+    </footer>
+  </body>
+
+</html>
