--- a/template.html
+++ b/template.html
@@ -36,7 +36,7 @@
     <title>Page Title</title>
 
   </head>
-  <body>
+  <body class="bg-dark">
     <!--TODO: Update Active classes on links if applicable-->
     <!--TODO: We can decide to use dropdowns or another popup or make them click through.-->
     <!--NAVBAR-->
@@ -89,8 +89,64 @@
       </div>
     </nav>
 
-    <footer>
+    <div class="bg-dark">
+      <section id="cards" class="container">
+        <div class="d-flex my-3">
 
+          <!-- Jumbotron -->
+          <div class="jumbotron shadow w-100 py-5 mx-auto mt-3 bg-secondary">
+            <h1 class="display-3 text-light">Hello, world!</h1>
+            <p class="lead text-light">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-6 col-lg-4 mb-4">
+            <!-- Card -->
+            <div class="card shadow h-100 bg-primary">
+              <div class="card-body d-flex flex-column align-items-start">
+                <h4 class="card-title text-light font-weight-bold">Card Primary Fill</h4>
+                <p class="card-text text-light">With supporting text below as a natural lead-in to additional content. This has text that may wrap to the next line.</p>
+                <a href="#" class="btn btn-outline-secondary text-light mt-auto">Button</a>
+              </div>
+            </div>
+
+          </div>
+          <div class="col-xl-6 col-lg-4 mb-4">
+            <div class="card shadowborder-secondary h-100">
+              <div class="card-body">
+                <h4 class="card-title text-secondary">Card Outline</h4>
+                <p class="card-text text-dark">With supporting text below as a natural lead-in to additional content. This has text that may wrap to the next line.</p>
+                <a href="#" class="btn btn-outline-primary mt-auto">Button</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-12 col-lg-4 mb-4">
+            <div class="card shadowbg-primary text-white h-100">
+              <div class="card-body d-flex flex-column align-items-start">
+                <h4 class="card-title">Card</h4>
+                <p class="card-text">Watch me scale, scale. Now watch me stack, stack. Watch me scale, scale...</p>
+                <a href="#" class="btn btn-primary border-white mt-auto">Button</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- TODO: PICK A FOOTER OPTION-->
+    <!--FOOTER Dark BG/light TEXT-->
+    <footer class="bg-dark">
+      <!-- Add font awesome icons -->
+      <hr>
+      <div class="container justify-content-center text-center" style="font-size: 3.5rem;">
+        <a href="https://www.facebook.com/BUGSS-Baltimore-Under-Ground-Science-Space-275707269195705/" class="fa fa-facebook text-light text-decoration-none"></a>
+        <a href="https://twitter.com/bugsslab" class="fa fa-twitter text-light text-decoration-none"></a>
+        <a href="https://www.youtube.com/channel/UCr4bqCH50xDCnrWBCUbobBQ" class="fa fa-youtube text-light text-decoration-none"></a>
+        <a href="https://www.instagram.com/bugsslab/" class="fa fa-instagram text-light text-decoration-none"></a>
+        <div>
+    </footer>
+    <!--FOOTER Default BG/ACCENT TEXT-->
+    <footer>
       <!-- Add font awesome icons -->
       <hr>
       <div class="container justify-content-center text-center" style="font-size: 3.5rem;">
@@ -98,7 +154,18 @@
         <a href="https://twitter.com/bugsslab" class="fa fa-twitter text-decoration-none"></a>
         <a href="https://www.youtube.com/channel/UCr4bqCH50xDCnrWBCUbobBQ" class="fa fa-youtube text-decoration-none"></a>
         <a href="https://www.instagram.com/bugsslab/" class="fa fa-instagram text-decoration-none"></a>
-      <div>
+        <div>
+    </footer>
+    <!--FOOTER LIGHT BG/ACCENT TEXT-->
+    <footer class="bg-light">
+      <!-- Add font awesome icons -->
+      <hr>
+      <div class="container justify-content-center text-center" style="font-size: 3.5rem;">
+        <a href="https://www.facebook.com/BUGSS-Baltimore-Under-Ground-Science-Space-275707269195705/" class="fa fa-facebook text-decoration-none"></a>
+        <a href="https://twitter.com/bugsslab" class="fa fa-twitter text-decoration-none"></a>
+        <a href="https://www.youtube.com/channel/UCr4bqCH50xDCnrWBCUbobBQ" class="fa fa-youtube text-decoration-none"></a>
+        <a href="https://www.instagram.com/bugsslab/" class="fa fa-instagram text-decoration-none"></a>
+        <div>
     </footer>
   </body>
 
