--- a/template.html
+++ b/template.html
@@ -88,15 +88,19 @@
         </form>
       </div>
     </nav>
-
+    <nav class="navbar nav-pills nav-fill bg-primary ">
+      <a class="nav-item nav-link text-white" href="#">Sub-Navigation 1</a>
+      <a class="nav-item nav-link text-white" href="#">A Link</a>
+      <a class="nav-item nav-link text-white" href="#">Another Link</a>
+    </nav>
     <div class="bg-dark">
       <section id="cards" class="container">
         <div class="d-flex my-3">
 
           <!-- Jumbotron -->
           <div class="jumbotron shadow w-100 py-5 mx-auto mt-3 bg-secondary">
-            <h1 class="display-3 text-light">Hello, world!</h1>
-            <p class="lead text-light">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <h1 class="display-3 text-white">Hello, world!</h1>
+            <p class="lead text-white">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
           </div>
         </div>
         <div class="row">
