--- a/theme.html
+++ b/theme.html
@@ -461,7 +461,348 @@
         </div>
       </div>
     </div>
+
+    <!--DARK BACKGROUND MOD EXAMPLES-->
     <div class="bg-dark">
+      <div class="flex-grow-1 d-flex flex-column">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xl-9 col-lg-10 mx-auto" id="content">
+              <div class="row">
+                <div class="col-md pt-3 text-white">
+                  <section id="textTest" class="shadow p-2 mb-3">
+                    <h1 class="text-white">This is h1 heading.</h1>
+                    <h2 class="text-white">This is h2 heading.</h2>
+                    <h3 class="text-white">This is h3 heading.</h3>
+                    <h4 class="text-white">This is h4 heading.</h4>
+                    <h5 class="text-white">This is h5 heading.</h5>
+                    <p>This is paragraph.</p>
+                    This is free text. This section has regular shadow.
+                    </section>
+                  </section>
+                  <section id="textTest" class="pb-2">
+                    <h3 class="text-white">Modal Test</h3>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Launch demo modal</button>
+                    <div class="modal fade" id="exampleModal" aria-labelledby="exampleModalLabel" role="dialog" aria-hidden="true">
+                      <div class="modal-dialog">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h4 class="modal-title" id="exampleModalLabel">Modal Title</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close Reservation Modal Box" aria-hidden="true">&times;</button>
+                          </div>
+                          <div class="modal-body">
+                            <p>This is the modal body</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button class="btn btn-danger">Delete</button>
+                            <button type="button" class="btn btn-outline-info" data-dismiss="modal" aria-label="Close Reservation Modal Box" aria-hidden="true" id="buttonClose">Close</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </section>
+                  <section id="buttons" class="pb-2">
+                    <div class="row">
+                      <div class="col-12">
+
+                        <!-- Breadcrumb -->
+                        <nav aria-label="breadcrumb">
+                          <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="#">Home</a></li>
+                            <li class="breadcrumb-item"><a href="#">Library</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Breadcrumb</li>
+                          </ol>
+                        </nav>
+
+                      </div>
+                      <div class="col-lg-4">
+                        <div class="pb-3">
+                          <button type="button" class="btn btn-light mr-1">Button</button>
+                          <button type="button" class="btn btn-outline-light">Outline</button>
+                        </div>
+                        <div class="pb-3">
+                          <!-- Large Button -->
+                          <button type="button" class="btn btn-light align-bottom btn-lg mr-1">Large</button>
+
+                          <!-- Small Button -->
+                          <button type="button" class="btn btn-light align-bottom btn-sm mr-1">Small</button>
+
+                          <!-- Link -->
+                          <a href="#">Text</a>
+
+                          <button type="button" class="btn disabled align-bottom mr-1">Disabled</button>
+
+                        </div>
+                      </div>
+                      <div class="col-lg-8 text-right">
+
+                        <!-- Button toolbar -->
+                        <div class="btn-toolbar d-inline-block mb-3" role="toolbar" aria-label="Toolbar with button groups">
+                          <div class="btn-group mr-2" role="group" aria-label="First group">
+                            <button type="button" class="btn btn-outline-light">1</button>
+                            <button type="button" class="btn btn-light">2</button>
+                            <button type="button" class="btn btn-light">3</button>
+                            <button type="button" class="btn btn-light">4</button>
+                          </div>
+                          <div class="btn-group mr-2" role="group" aria-label="Second group">
+                            <button type="button" class="btn btn-primary">5</button>
+                            <button type="button" class="btn btn-primary">6</button>
+                            <button type="button" class="btn btn-primary">7</button>
+                          </div>
+                          <div class="btn-group" role="group" aria-label="Third group">
+                            <button type="button" class="btn btn-light">8</button>
+                          </div>
+                        </div>
+
+                        <!-- Dropdown Button -->
+                        <div class="dropdown">
+                          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown button
+                          </button>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                          </div>
+                        </div>
+
+                      </div>
+                      <div class="col-12 py-4">
+                        <button class="btn btn-primary mr-1 mb-1">Primary</button>
+                        <button class="btn btn-light-primary mr-1 mb-1">Light Primary</button>
+                        <button class="btn btn-secondary mr-1 mb-1">Secondary</button>
+                        <button class="btn btn-info mr-1 mb-1">Info</button>
+                        <button class="btn btn-danger mr-1 mb-1">Danger</button>
+                        <button class="btn btn-success mr-1 mb-1">Success</button>
+                        <button class="btn btn-warning mr-1 mb-1">Warning</button>
+                        <button class="btn btn-light border mr-1 mb-1">Light</button>
+                        <button class="btn btn-dark mr-1 mb-1">Dark</button>
+                        <button class="btn btn-dark-secondary mr-1 mb-1">Dark Secondary</button>
+
+                      </div>
+                    </div>
+                  </section>
+
+                  <section id="navs" class="py-3">
+                    <div class="row">
+                      <div class="col-xl-9 pb-4">
+
+                        <!-- Nav -->
+                        <ul class="nav">
+                          <li class="nav-item">
+                            <a class="nav-link pl-0 text-light" href="#">Link</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Link</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Link</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Link</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-info disabled" href="#">Disabled</a>
+                          </li>
+                        </ul>
+                        <hr>
+
+                        <!-- Nav Tabs -->
+                        <ul class="nav nav-tabs">
+                          <li class="nav-item">
+                            <a class="nav-link active" href="#tab1" data-toggle="tab">Tab</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-light" href="#tab2" data-toggle="tab">Tab</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-light" href="#tab3" data-toggle="tab">Tab</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-info disabled" href="#tab4" data-toggle="tab">Disabled</a>
+                          </li>
+                        </ul>
+                        <div class="tab-content px-1 pt-2">
+                          <div class="tab-pane active" id="tab1">
+                            <p>
+                              Welcome to my custom Bootstrap 4 test page that is a simple way to see various Bootstrap component examples.
+                            </p>
+                            <nav aria-label="Page navigation example">
+                              <ul class="pagination">
+                                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                              </ul>
+                            </nav>
+                          </div>
+                          <div class="tab-pane" id="tab2">2. Put a little content in your pane.</div>
+                          <div class="tab-pane" id="tab3">3. Put some more content in your pane here.</div>
+                        </div>
+                      </div>
+                      <div class="col-xl-3 pb-4">
+
+                        <!-- Vertical Nav -->
+                        <ul class="nav nav-pills flex-column mb-3">
+                          <li class="nav-item">
+                            <a class="nav-link active" href="#" data-toggle="popover" data-trigger="hover" data-placement="top" data-title="Primary color" data-content="Links and 'active' elements always use the primary color.">Active</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Link</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Link</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Link</a>
+                          </li>
+                        </ul>
+
+                        <!-- Dropdown Split Button -->
+                        <div class="btn-group mb-3 w-100">
+                          <button type="button" class="btn btn-primary btn-block">Dropdown</button>
+                          <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="sr-only">Toggle Dropdown</span>
+                          </button>
+                          <div class="dropdown-menu dropdown-menu-right">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Link</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Separated link</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </section>
+
+                  <section id="grid" class="py-3">
+                    <p class="lead">The rows &amp; columns of the world famous Bootstrap grid speak for themselves.</p>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        6
+                      </div>
+                      <div class="col-6 text-primary">
+                        <div class="card shadow my-1 bg-light">6</div>
+                      </div>
+                      <div class="col-sm-5">
+                        5
+                      </div>
+                      <div class="col-7 text-primary">
+                        <div class="card shadow my-1 bg-light">7</div>
+                      </div>
+                      <div class="col-sm-4">
+                        4
+                      </div>
+                      <div class="col-8 text-primary">
+                        <div class="card shadow my-1 bg-light">8</div>
+                      </div>
+                      <div class="col-sm-3">
+                        3
+                      </div>
+                      <div class="col-9 text-primary">
+                        <div class="card shadow my-1 bg-light">9</div>
+                      </div>
+                      <div class="col-sm-2">
+                        2
+                      </div>
+                      <div class="col-10 text-primary">
+                        <div class="card shadow my-1 bg-light">10</div>
+                      </div>
+                      <div class="col-sm-1">
+                        1
+                      </div>
+                      <div class="col-11 text-primary">
+                        <div class="card shadow my-1 bg-light">11</div>
+                      </div>
+                    </div>
+                  </section>
+
+                  <section id="cards" class="bg-faded py-2">
+                    <div class="d-flex my-3">
+
+                      <!-- Jumbotron -->
+                      <div class="shadow jumbotron bg-white w-100 py-5 mx-auto">
+                        <h1 class="display-3">Hello, world!</h1>
+                        <p class="lead text-dark">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                      </div>
+
+                    </div>
+                    <div class="row text-dark">
+                      <div class="col-xl-6 col-lg-4 mb-4">
+
+                        <!-- Card -->
+                        <div class="card shadow border-primary h-100">
+                          <div class="card-body d-flex flex-column align-items-start">
+                            <h4 class="card-title text-primary">Card Outline</h4>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content. This has text that may wrap to the next line.</p>
+                            <a href="#" class="btn btn-primary mt-auto">Button</a>
+                          </div>
+                        </div>
+
+                      </div>
+                      <div class="col-xl-6 col-lg-4 mb-4">
+                        <div class="card shadow border-primary h-100">
+                          <div class="card-body">
+
+                            <!-- List Group -->
+                            <div class="list-group">
+                              <a href="#" class="list-group-item list-group-item-action active">List Group</a>
+                              <a href="#" class="list-group-item list-group-item-action">List item</a>
+                              <a href="#" class="list-group-item list-group-item-action">List item 2</a>
+                              <a href="#" class="list-group-item list-group-item-action disabled">List item 3</a>
+                            </div>
+
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-xl-12 col-lg-4 mb-4">
+                        <div class="card shadow bg-primary text-white h-100">
+                          <div class="card-body d-flex flex-column align-items-start">
+                            <h4 class="card-title">Card</h4>
+                            <p class="card-text">Watch me scale, scale. Now watch me stack, stack. Watch me scale, scale...</p>
+                            <a href="#" class="btn btn-primary border-white mt-auto">Button</a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-sm-12 col-lg-4 mb-4">
+                        <div class="card shadow bg-secondary h-100">
+                          <div class="card-body d-flex flex-column align-items-start">
+                            <h4 class="card-title text-light">Card</h4>
+                            <p class="card-text text-light">Watch me scale, scale. Now watch me stack, stack. Watch me scale, scale...</p>
+                            <a href="#" class="btn btn-outline-light mt-auto">Button</a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-sm-12 col-lg-4 mb-4">
+                        <div class="card shadow bg-info h-100">
+                          <div class="card-body d-flex text-light flex-column align-items-start">
+                            <h4 class="card-title text-light">Card</h4>
+                            <p class="card-text">Watch me scale, scale. Now watch me stack, stack. Watch me scale, scale...</p>
+                            <a href="#" class="btn btn-secondary mt-auto">Button</a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-sm-12 col-lg-4 mb-4">
+                        <div class="card shadow border-dark h-100">
+                          <div class="card-body d-flex flex-column align-items-start">
+                            <h4 class="card-title text-primary">Card</h4>
+                            <p class="card-text">Watch me scale, scale. Now watch me stack, stack. <span class="text-secondary"> Watch me scale, scale...</span></p>
+                            <a href="#" class="btn btn-primary mt-auto">Button</a>
+                          </div>
+                        </div>
+                      </div>
+
+                    </div>
+                  </section>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <section id="cards" class="container">
         <div class="d-flex my-3">
 
@@ -493,9 +834,9 @@
             </div>
           </div>
           <div class="col-xl-12 col-lg-4 mb-4">
-            <div class="card shadowbg-primary text-white h-100">
+            <div class="card shadow bg-primary text-white h-100">
               <div class="card-body d-flex flex-column align-items-start">
-                <h4 class="card-title">Card</h4>
+                <h4 class="card-title text-white">Card</h4>
                 <p class="card-text">Watch me scale, scale. Now watch me stack, stack. Watch me scale, scale...</p>
                 <a href="#" class="btn btn-primary border-white mt-auto">Button</a>
               </div>
