--- a/template.html
+++ b/template.html
@@ -36,11 +36,11 @@
     <title>Page Title</title>
 
   </head>
-  <body class="bg-dark">
+  <body class="bg-black">
     <!--TODO: Update Active classes on links if applicable-->
     <!--TODO: We can decide to use dropdowns or another popup or make them click through.-->
     <!--NAVBAR-->
-    <nav class="navbar navbar-light navbar-expand-lg bg-light">
+    <nav class="navbar navbar-light navbar-expand-lg bg-white">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -93,10 +93,10 @@
       <a class="nav-item nav-link text-white" href="#">A Link</a>
       <a class="nav-item nav-link text-white" href="#">Another Link</a>
     </nav>
-    <div class="bg-dark">
+    <div>
       <section id="cards" class="container">
         <div class="d-flex my-3">
-
+          <p class="display-4 text-info"> contrast test </p>
           <!-- Jumbotron -->
           <div class="jumbotron shadow w-100 py-5 mx-auto mt-3 bg-secondary">
             <h1 class="display-3 text-white">Hello, world!</h1>
@@ -138,38 +138,47 @@
     </div>
 
     <!-- TODO: PICK A FOOTER OPTION-->
-    <!--FOOTER Dark BG/light TEXT-->
-    <footer class="bg-dark">
-      <!-- Add font awesome icons -->
-      <hr>
-      <div class="container justify-content-center text-center" style="font-size: 3.5rem;">
-        <a href="https://www.facebook.com/BUGSS-Baltimore-Under-Ground-Science-Space-275707269195705/" class="fa fa-facebook text-light text-decoration-none"></a>
-        <a href="https://twitter.com/bugsslab" class="fa fa-twitter text-light text-decoration-none"></a>
-        <a href="https://www.youtube.com/channel/UCr4bqCH50xDCnrWBCUbobBQ" class="fa fa-youtube text-light text-decoration-none"></a>
-        <a href="https://www.instagram.com/bugsslab/" class="fa fa-instagram text-light text-decoration-none"></a>
-        <div>
-    </footer>
     <!--FOOTER Default BG/ACCENT TEXT-->
     <footer>
       <!-- Add font awesome icons -->
       <hr>
-      <div class="container justify-content-center text-center" style="font-size: 3.5rem;">
-        <a href="https://www.facebook.com/BUGSS-Baltimore-Under-Ground-Science-Space-275707269195705/" class="fa fa-facebook text-decoration-none"></a>
-        <a href="https://twitter.com/bugsslab" class="fa fa-twitter text-decoration-none"></a>
-        <a href="https://www.youtube.com/channel/UCr4bqCH50xDCnrWBCUbobBQ" class="fa fa-youtube text-decoration-none"></a>
-        <a href="https://www.instagram.com/bugsslab/" class="fa fa-instagram text-decoration-none"></a>
-        <div>
+      <div class="row justify-content-around text-center">
+        <div class="col text-secondary">
+          Address: <br>
+          101 North Haven Street,<br>
+          Baltimore MD 21224
+        </div>
+        <div class="col" style="font-size: 3.5rem;">
+          <a href="https://www.facebook.com/BUGSS-Baltimore-Under-Ground-Science-Space-275707269195705/" class="fa fa-facebook text-decoration-none"></a>
+          <a href="https://twitter.com/bugsslab" class="fa fa-twitter text-decoration-none"></a>
+          <a href="https://www.youtube.com/channel/UCr4bqCH50xDCnrWBCUbobBQ" class="fa fa-youtube text-decoration-none"></a>
+          <a href="https://www.instagram.com/bugsslab/" class="fa fa-instagram text-decoration-none"></a>
+        </div>
+        <div class="col text-secondary">
+        Email: <a class="link-light" href="mailto:info@bugssonline.org">info@bugssonline.org</a>
+         </div>
+          </div>
     </footer>
     <!--FOOTER LIGHT BG/ACCENT TEXT-->
     <footer class="bg-light">
       <!-- Add font awesome icons -->
       <hr>
-      <div class="container justify-content-center text-center" style="font-size: 3.5rem;">
-        <a href="https://www.facebook.com/BUGSS-Baltimore-Under-Ground-Science-Space-275707269195705/" class="fa fa-facebook text-decoration-none"></a>
-        <a href="https://twitter.com/bugsslab" class="fa fa-twitter text-decoration-none"></a>
-        <a href="https://www.youtube.com/channel/UCr4bqCH50xDCnrWBCUbobBQ" class="fa fa-youtube text-decoration-none"></a>
-        <a href="https://www.instagram.com/bugsslab/" class="fa fa-instagram text-decoration-none"></a>
-        <div>
+          <div class="row justify-content-around text-center">
+            <div class="col text-primary">
+              Address: <br>
+              101 North Haven Street,<br>
+              Baltimore MD 21224
+            </div>
+            <div class="col" style="font-size: 3.5rem;">
+              <a href="https://www.facebook.com/BUGSS-Baltimore-Under-Ground-Science-Space-275707269195705/" class="fa fa-facebook text-decoration-none text-primary"></a>
+              <a href="https://twitter.com/bugsslab" class="fa fa-twitter text-decoration-none text-primary"></a>
+              <a href="https://www.youtube.com/channel/UCr4bqCH50xDCnrWBCUbobBQ" class="fa fa-youtube text-decoration-none text-primary"></a>
+              <a href="https://www.instagram.com/bugsslab/" class="fa fa-instagram text-decoration-none text-primary"></a>
+            </div>
+            <div class="col text-primary">
+            Email: <a href="mailto:info@bugssonline.org">info@bugssonline.org</a>
+             </div>
+              </div>
     </footer>
   </body>
 
