--- a/template-light.html
+++ b/template-light.html
@@ -36,12 +36,12 @@
     <title>Page Title</title>
 
   </head>
-  <body class="bg-black">
+  <body>
     <!--TODO: Update Active classes on links if applicable-->
     <!--TODO: We can decide to use dropdowns or another popup or make them click through.-->
     <!--NAVBAR-->
     <nav class="navbar navbar-light navbar-expand-lg bg-white">
-      <a class="navbar-brand" href="#"><img height="150" src="media/bugsslogo-square300.png"></a>
+      <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -124,7 +124,7 @@
             </div>
           </div>
           <div class="col-xl-6 col-lg-4 mb-4">
-            <div class="card shadow border-dark h-100">
+            <div class="card shadow border-secondary h-100">
               <div class="card-body d-flex flex-column align-items-start">
                 <h4 class="card-title">Card</h4>
                 <p class="card-text">Watch me scale, scale. Now watch me stack, stack. Watch me scale, scale...</p>
