--- a/theme.html
+++ b/theme.html
@@ -463,7 +463,7 @@
     </div>
 
     <!--DARK BACKGROUND MOD EXAMPLES-->
-    <div class="bg-dark">
+    <div class="bg-black">
       <div class="flex-grow-1 d-flex flex-column">
         <div class="container-fluid">
           <div class="row">
@@ -834,7 +834,7 @@
             </div>
           </div>
           <div class="col-xl-12 col-lg-4 mb-4">
-            <div class="card shadow bg-primary text-white h-100">
+            <div class="card shadow bg-dark text-light h-100">
               <div class="card-body d-flex flex-column align-items-start">
                 <h4 class="card-title text-white">Card</h4>
                 <p class="card-text">Watch me scale, scale. Now watch me stack, stack. Watch me scale, scale...</p>
