comment light footer

--- a/template.html
+++ b/template.html
@@ -82,10 +82,10 @@
             <a class="nav-link" href="#">Support Us</a>
           </li>
         </ul>
-        <form class="form-inline" method="get" action="../search.php">
+        <!--<form class="form-inline" method="get" action="../search.php">
           <input class="form-control mr-sm-2" type="search" name="query" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        </form>-->
       </div>
     </nav>
     <nav class="navbar nav-pills nav-fill bg-primary ">
