--- a/web pages/Projects/Scramble_Synthetic_Yeast.html
+++ b/web pages/Projects/Scramble_Synthetic_Yeast.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Scramble and Systhetic Yeast</title>
+    <title>Scramble and Synthetic Yeast</title>
   </head>
   <body>
 
