--- a/web pages/Communities/Community.html
+++ b/web pages/Communities/Community.html
@@ -124,7 +124,7 @@
                   individuals. Rachel discussed the history of the Human Genome Project and the race to produce the first full sequence of a human’s DNA. Because two organizations were racing to get publish the full genome before their competition,
                   ~70% of the reference genome produced by the Human Genome Project is comprised of one individual.
                 </p>
-                <a href="#" class="btn btn-primary border-white mt-auto">Read the Full Article</a>
+                <a href="articles/genome.html" class="btn btn-primary border-white mt-auto">Read the Full Article</a>
               </div>
             </div>
           </div>
@@ -141,7 +141,7 @@
                 <p class="card-text text-truncate">
                   On November 9, 2018, BUGSS hosted an influenza panel discussion featuring scientists and clinicians from the Maryland Department of Health and Johns Hopkins University.
                 </p>
-                <a href="#" class="btn btn-primary border-white mt-auto">Read the Full Article</a>
+                <a href="articles/FluPanel.html" class="btn btn-primary border-white mt-auto">Read the Full Article</a>
               </div>
             </div>
           </div>
