--- a/web pages/Communities/Community.html
+++ b/web pages/Communities/Community.html
@@ -75,7 +75,7 @@
             <a class="nav-link active" href="#">For Community Members</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">For Kids</a>
+            <a class="nav-link" href="#">For Kids and Parents</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Support Us</a>
