--- a/web pages/Communities/Kids.html
+++ b/web pages/Communities/Kids.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>For Kids!</title>
+    <title>For Kids and Parents!</title>
   </head>
   <body>
 
