--- a/template.html
+++ b/template.html
@@ -88,11 +88,11 @@
         </form>-->
       </div>
     </nav>
-    <nav class="navbar nav-pills nav-fill bg-primary ">
+      <ul class="nav nav-fill nav-pills bg-primary">
       <a class="nav-item nav-link text-white" href="#">Sub-Navigation 1</a>
       <a class="nav-item nav-link text-white" href="#">A Link</a>
       <a class="nav-item nav-link text-white" href="#">Another Link</a>
-    </nav>
+    </ul>
     <div>
       <section id="cards" class="container">
         <div class="d-flex my-3">
