--- a/web pages/Communities/Community.html
+++ b/web pages/Communities/Community.html
@@ -88,22 +88,25 @@
       </div>
     </nav>
 
-    <ul class="nav nav-fill nav-pills bg-black" id="pills-tab" role="tablist">
+
+    <ul class="nav nav-fill nav-pills bg-primary" id="pills-tab" role="tablist">
       <li class="nav-item">
-        <a class="nav-link text-white active" id="pills-upcoming-tab" data-toggle="pill" href="#pills-upcoming" role="tab" aria-controls="pills-upcoming" aria-selected="true">Upcoming Events</a>
+        <a class="nav-link text-white active rounded-0" id="pills-upcoming-tab" data-toggle="pill" href="#pills-upcoming" role="tab" aria-controls="pills-upcoming" aria-selected="true">Upcoming Events</a>
+      </li>
+      <li class="nav-item round-0">
+        <a class="nav-link text-white rounded-0" id="pills-seminars-tab" data-toggle="pill" href="#pills-seminars" role="tab" aria-controls="pills-seminars" aria-selected="false">Past Seminars</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" id="pills-seminars-tab" data-toggle="pill" href="#pills-seminars" role="tab" aria-controls="pills-seminars" aria-selected="false">Past Seminars</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" id="pills-courses-tab" data-toggle="pill" href="#pills-courses" role="tab" aria-controls="pills-courses" aria-selected="false">Past Courses</a>
+        <a class="nav-link text-white rounded-0" id="pills-courses-tab" data-toggle="pill" href="#pills-courses" role="tab" aria-controls="pills-courses" aria-selected="false">Past Courses</a>
       </li>
     </ul>
     <div class="tab-content container-fluid bg-white" id="pills-tabContent">
+      <!--UPCOMING EVENTS TAB -->
       <div class="tab-pane fade show active" id="pills-upcoming" role="tabpanel" aria-labelledby="pills-upcoming-tab">
         <h1 class="display-4"> Upcoming Events </h1>
         <p> Eventbrite data here </p>
       </div>
+      <!--SEMINARS TAB-->
       <div class="tab-pane fade" id="pills-seminars" role="tabpanel" aria-labelledby="pills-seminars-tab">
         <h1 class="display-4"> Past Seminars </h1>
         <p class="container-fluid lead">BUGSS hosts an ever-changing array of seminars, Open Mic nights, open houses, and workshops. Our Eventbrite page has the most current listing of seminars, workshops, and courses.</p>
@@ -149,6 +152,7 @@
         </div>
 
       </div>
+      <!--COURSES TAB-->
       <div class="tab-pane fade" id="pills-courses" role="tabpanel" aria-labelledby="pills-courses-tab">
         <h1 class="display-4"> Past Courses </h1>
         <p class="container-fluid lead">BUGGS offers numerous courses where the public can engage directly with hands-on biotechnology activities. Courses involve short lectures interspersed with hands-on lab experiments.</p>
@@ -254,7 +258,8 @@
                     <h4 class="card-title text-primary">Resilient DNA: To what extent can our genetics determine who we are?</h4>
                     <h5 class="col card-subtitle mb-2">October 27, 2018 AND November 3rd from 10:00 AM to 2:00 PM (this is a 2-week class, the sessions are not the same)</h5>
                     <p class="card-text">
-                      Are your genes making you stressed? In this class participants will check themselves for a variant in the serotonin transporter gene (SLC6A4) associated with stress resiliency to explore the  relationship between genes, environment, and personality traits. Class will be appropriate for adults, and advanced high school students.
+                      Are your genes making you stressed? In this class participants will check themselves for a variant in the serotonin transporter gene (SLC6A4) associated with stress resiliency to explore the relationship between genes,
+                      environment, and personality traits. Class will be appropriate for adults, and advanced high school students.
                     </p>
                     <a href="#" class="btn btn-primary border-white mt-auto">More Information</a>
                   </div>
@@ -274,7 +279,9 @@
                     <h4 class="card-title text-primary">Influenza: Fact and Fiction</h4>
                     <h5 class="col card-subtitle mb-2">November 10, 2018 AND November 17, 2018 from 10:00 AM to 2:00 PM (this is a 2-week class, the sessions are not the same)</h5>
                     <p class="card-text">
-                      Influenza (the flu) causes misery every season. Why haven’t we conquered it yet? Why is it so hard to make a vaccine? How and why is the virus constantly changing? In this class, we’ll learn all about the flu and why it’s so hard to combat by focusing on the proteins of the flu virus and our immune response. We’ll learn how to detect flu proteins in the lab using the ELISA technique. Class will be appropriate for adults, and advanced high school students.
+                      Influenza (the flu) causes misery every season. Why haven’t we conquered it yet? Why is it so hard to make a vaccine? How and why is the virus constantly changing? In this class, we’ll learn all about the flu and why it’s so
+                      hard to combat by focusing on the proteins of the flu virus and our immune response. We’ll learn how to detect flu proteins in the lab using the ELISA technique. Class will be appropriate for adults, and advanced high school
+                      students.
                     </p>
                     <a href="#" class="btn btn-primary border-white mt-auto">More Information</a>
                   </div>
@@ -294,7 +301,9 @@
                     <h4 class="card-title text-primary">CRISPR Gene Editing</h4>
                     <h5 class="col card-subtitle mb-2">December 1, 2018 from 10:00 AM to 2:00 PM </h5>
                     <p class="card-text">
-                    Did you miss our big 4-week course on CRISPR in August? No worries, we’re diving back into the world of gene editing with a 1-day seminar and lab. We’ll talk with a genetic counselor about the use of CRISPR gene editing technology in the treatment of disease-which diseases does it work best for? Which genetic disease communities are most excited about the prospects? Then we’ll move into the lab to learn how to use CRISPR to edit DNA sequences to our exact specifications. Class will be appropriate for adults, and advanced high school students.
+                      Did you miss our big 4-week course on CRISPR in August? No worries, we’re diving back into the world of gene editing with a 1-day seminar and lab. We’ll talk with a genetic counselor about the use of CRISPR gene editing
+                      technology in the treatment of disease-which diseases does it work best for? Which genetic disease communities are most excited about the prospects? Then we’ll move into the lab to learn how to use CRISPR to edit DNA sequences
+                      to our exact specifications. Class will be appropriate for adults, and advanced high school students.
                     </p>
                     <a href="#" class="btn btn-primary border-white mt-auto">More Information</a>
                   </div>
@@ -314,7 +323,8 @@
                     <h4 class="card-title text-primary">Glow Bugs!</h4>
                     <h5 class="col card-subtitle mb-2">December 8, 2018 from 1-4 PM</h5>
                     <p class="card-text">
-                    It’s glow time! Let’s learn about bioluminescence by working with a glowing bacteria. These brilliant “bugs” glow in response to oxygen or movement to create a mesmerizing glow effect. In this hands-on workshop we will get a chance to build and create gadgets (e.g. a tube that pushes oxygen through the bacterial culture with a push of a button) to show off this incredible property! This course is appropriate for students in middle school and up.
+                      It’s glow time! Let’s learn about bioluminescence by working with a glowing bacteria. These brilliant “bugs” glow in response to oxygen or movement to create a mesmerizing glow effect. In this hands-on workshop we will get a
+                      chance to build and create gadgets (e.g. a tube that pushes oxygen through the bacterial culture with a push of a button) to show off this incredible property! This course is appropriate for students in middle school and up.
                     </p>
                     <a href="#" class="btn btn-primary border-white mt-auto">More Information</a>
                   </div>
@@ -323,7 +333,6 @@
             </div>
           </div>
         </div>
-
 
       </div>
     </div>
