--- a/web pages/Projects/Projects_Landing_page.html
+++ b/web pages/Projects/Projects_Landing_page.html
@@ -47,18 +47,26 @@
 
       <div class="collapse navbar-collapse" id="navbarColor02">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               About
             </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Donors and Sponsors</a>
+              <a class="dropdown-item" href="#">FAQ</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Membership</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="Projects_Landing_page.html">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Group Projects
             </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Scramble and Synthetic Yeast</a>
+              <a class="dropdown-item" href="#">Barcoding the Harbor</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">For Scientists</a>
