--- a/web pages/Projects/Scramble_Synthetic_Yeast.html
+++ b/web pages/Projects/Scramble_Synthetic_Yeast.html
@@ -46,14 +46,26 @@
 
       <div class="collapse navbar-collapse" id="navbarColor02">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              About
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Donors and Sponsors</a>
+              <a class="dropdown-item" href="#">FAQ</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Membership</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="">Group Projects</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Group Projects
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item active" href="#">Scramble and Synthetic Yeast</a>
+              <a class="dropdown-item" href="#">Barcoding the Harbor</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">For Scientists</a>
@@ -68,6 +80,10 @@
             <a class="nav-link" href="#">Support Us</a>
           </li>
         </ul>
+        <!--<form class="form-inline" method="get" action="../search.php">
+          <input class="form-control mr-sm-2" type="search" name="query" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>-->
       </div>
     </nav>
 
